--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,32 @@
     <artifactId>extentreports</artifactId>
     <version>5.0.9</version>
 </dependency>
-    </dependencies>
+
+  </dependencies>
+  <build>
+  
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.5.1</version>
+          <configuration>
+          <verbose>true</verbose>
+          <fork>true</fork>
+          <executable>${env.JAVA_HOME}</executable>
+          <compilerVersion>17</compilerVersion>
+          <source>17</source>
+          <target>17</target>
+            <!-- put your configurations here -->
+          </configuration>
+        </plugin>
+        
+      </plugins>
+      
+  </build>
+  <properties>
+  <java.home>C:\Program Files\Java\jdk-17.0.2\bin\javac</java.home>
+  </properties>
+
+  
 </project>
